Enhanced logging of non-main-queue